--- a/src/assets/scss/object/component/_img-box.scss
+++ b/src/assets/scss/object/component/_img-box.scss
@@ -10,10 +10,19 @@
 	top: 0;
 	left: 0;
 	padding: 5px;
+	@include is-sp {
+		width: 62px;
+		height: 62px;
+	}
 
 	&__txt {
+		display: flex;
+		justify-content: center;
+		align-items: center;
 		border-top: 1px solid #fff;
 		border-right: 1px solid #ffff;
+		width: 100%;
+		height: 100%;
 	}
 
 	&__ttl {
@@ -22,8 +31,7 @@
 		font-weight: 700;
 		padding-top: 20px;
 		padding-bottom: 12px;
-
-		@include font-line(11);
+		@include font-line(10);
 	}
 
 	&__sub {
