--- a/src/assets/scss/object/project/_addons.scss
+++ b/src/assets/scss/object/project/_addons.scss
@@ -442,7 +442,7 @@
 		@include is-sp {
 			margin-bottom: 30px;
 			flex-wrap: wrap;
-			padding: 24px 50px 0;
+			padding: 24px 0 0;
 		}
 
 		@include is-max(435px) {
@@ -466,7 +466,7 @@
 					font-size: 18px;
 					font-weight: 700;
 					font-family: yu-mincho-pr6n, sans-serif;
-					letter-spacing: 0.26em;
+					letter-spacing: normal;
 
 					@include is-max(1000px) {
 						font-size: 1.6vw;
