--- a/src/assets/scss/sections/_page-column.scss
+++ b/src/assets/scss/sections/_page-column.scss
@@ -414,6 +414,9 @@
                                     white-space: pre;
                                     transition: .3s ease-in-out;
                                     border: 1px solid #0093ee;
+                                    @include is-sp{
+                                        border-radius: 5px;
+                                    }
                                     &-hash{
                                         margin-right: 5px;
                                     }
@@ -424,9 +427,6 @@
                                     &:not(:last-child){
                                         margin-right: 5px;
 
-                                        @include is-sp{
-                                            margin-right: 0;
-                                        }
                                     }
                                     @include is-sp{
                                         @include font-line(10);
@@ -522,7 +522,7 @@
                             @include font-line(12);
                             font-family:cross-platform-yu-gothic;
                             font-weight: 500;
-                            padding: 2px 10px 2px;
+                            padding: 2px 10px 0;
                             border-radius: 5px;
                             white-space: pre;
                             transition: .3s ease-in-out;
@@ -629,6 +629,9 @@
                                         white-space: pre;
                                         transition: .3s ease-in-out;
                                         border: 1px solid #0093ee;
+                                        @include is-sp{
+                                            border-radius: 5px;
+                                        }
                                         &-hash{
                                             margin-right: 5px;
                                         }
@@ -638,10 +641,7 @@
                                         }
                                         &:not(:last-child){
                                             margin-right: 5px;
-    
-                                            @include is-sp{
-                                                margin-right: 0;
-                                            }
+
                                         }
                                         @include is-sp{
                                             @include font-line(10);
