--- a/src/assets/scss/pages/_realestatemanagement.scss
+++ b/src/assets/scss/pages/_realestatemanagement.scss
@@ -389,6 +389,10 @@
 					letter-spacing: 0.11em;
 					text-align: justify;
 
+					@include is-min(1024px){
+						padding-bottom: 30px;
+					}
+
 					@include is-max(750px) {
 						padding-right: unset;
 						padding-top: 25px;
@@ -634,7 +638,7 @@
 		&__box-big-new3 {
 			position: absolute;
 			right: 0;
-			top: 43%;
+			top: 57%;
 
 			@include is-sp {
 				display: none;
@@ -784,7 +788,7 @@
 				padding-bottom: 15px;
 				letter-spacing: 0.2em;
 				text-align: justify;
-				font-weight: 600;
+				font-weight: 500;
 
 				span {
 					@include font-line(11, 26);
@@ -1270,6 +1274,13 @@
 		padding-bottom: 33px;
 		background: linear-gradient(to right, #003782, #0059b6);
 
+		
+		.c-cards09-desc-ttl{
+			@include is-max(430px){
+				font-size: 4vw;
+				}
+			}
+
 		@include is-sp {
 			margin-top: 20px;
 		}
@@ -1538,6 +1549,10 @@
 		padding-top: 70px;
 		background-color: #fff;
 
+		.xb{
+			border-bottom: none;
+		}
+
 		&--clipbg {
 			background-color: #fff;
 		}
@@ -1550,7 +1565,7 @@
 
 		&__box-big-new {
 			position: absolute;
-			left: 57%;
+			left: 60%;
 			top: -12%;
 		}
 
@@ -1606,7 +1621,7 @@
 			text-align: left;
 			color: #2589ce;
 			font-family: yu-mincho-pr6n, sans-serif;
-			font-weight: 600;
+			font-weight: 500;
 			letter-spacing: 0.34em;
 
 			@include is-max(750px) {
