--- a/src/assets/scss/object/component/_card.scss
+++ b/src/assets/scss/object/component/_card.scss
@@ -503,8 +503,8 @@
 
 		&-view {
 			position: absolute;
-			bottom: 6%;
-			right: 5%;
+			bottom: 2%;
+			right: 2%;
 			font-family: century-gothic, sans-serif;
 			background: #258acf;
 			width: 62px;
@@ -517,15 +517,16 @@
 				line-height: 10px;
 				transform: rotate(310deg);
 				color: #fff;
-				padding-top: 31px;
-				padding-left: 10px;
+				padding-top: 34px;
+				padding-left: 0;
+				padding-right: 13px;
 				position: relative;
 
 				&::before {
 					content: "";
 					position: absolute;
-					bottom: -24%;
-					left: 26%;
+					bottom: -20%;
+					left: 27%;
 					width: 26%;
 					height: 30%;
 					clip-path: polygon(100% 0, 0% 100%, 100% 100%);
@@ -537,6 +538,7 @@
 	}
 
 	&-desc {
+		position: relative;
 		text-align: center;
 		background-color: #fff;
 		padding: 20px 5px 18px;
@@ -544,6 +546,10 @@
 
 		@include is-sp{
 			padding: 15px 5px 18px;
+		}
+
+		@include is-max(500px){
+			padding: 15px 5px 50px;
 		}
 
 		&-ttl {
