realestatepurchase,salesofrealestate fixed

--- a/src/assets/scss/pages/_privacy-policy.scss
+++ b/src/assets/scss/pages/_privacy-policy.scss
@@ -261,7 +261,7 @@
 
 							@include is-max(409px) {
 								font-size: 3.3vw;
-								padding-left: 10px;
+								padding-left: 0;
 							}
 
 							&--txt {
