--- a/src/assets/scss/object/component/_slider.scss
+++ b/src/assets/scss/object/component/_slider.scss
@@ -10,12 +10,12 @@
 		left: -4%;
 		width: 12px;
 		height: 25px;
-		background-image: url(../image/page/top-page/arr-left.png);
+		background-image: url(../image/page/top-page/arr-left.png) !important;
 		background-repeat: no-repeat;
 		z-index: 10;
 
 		@include is-sp {
-			background-image: url(../image/page/top-page/arr-left-sp.png);
+			background-image: url(../image/page/top-page/arr-left-sp.png) !important;
 			width: 21px;
 			height: 36px;
 			left: 0;
@@ -49,12 +49,12 @@
 		right: -2%;
 		width: 16px;
 		height: 25px;
-		background-image: url(../image/page/top-page/arr-right.png);
+		background-image: url(../image/page/top-page/arr-right.png) !important;
 		background-repeat: no-repeat;
 		z-index: 10;
 
 		@include is-sp {
-			background-image: url(../image/page/top-page/arr-right-sp.png);
+			background-image: url(../image/page/top-page/arr-right-sp.png) !important;
 			right: 0;
 			width: 40px;
 			height: 40px;
@@ -256,6 +256,11 @@
 			line-height: 16.5px;
 			text-align: left;
 		}
+	}
+
+	.slick-prev:before,
+	.slick-next:before{
+		content: none !important;
 	}
 
 	.slick-slide {
