--- a/src/assets/scss/object/project/_footer.scss
+++ b/src/assets/scss/object/project/_footer.scss
@@ -125,7 +125,7 @@
          
 
                 .ttl {
-                    font-family: cross-platform-yu-gothic, sans-serif;
+                    font-family: yu-gothic-pr6n, sans-serif;
                     position: relative;
                     margin-bottom: 49px;
                     @include font-line(11,37);
@@ -216,7 +216,7 @@
                             
         
                             &__inner {
-                                font-family:cross-platform-yu-gothic, sans-serif;
+                                font-family:yu-gothic-pr6n, sans-serif;
                                 letter-spacing: 2.8px;
                                 @include font-line(12,37);
                                 letter-spacing:0.26em;
@@ -288,7 +288,7 @@
             }
 
             .ttl {
-                font-family: cross-platform-yu-gothic, sans-serif;
+                font-family: yu-gothic-pr6n, sans-serif;
                 position: relative;
                 margin-bottom: 49px;
                 @include font-line(11,37);
@@ -386,7 +386,7 @@
                         
     
                         &__inner {
-                            font-family:cross-platform-yu-gothic, sans-serif;
+                            font-family:yu-gothic-pr6n, sans-serif;
                             letter-spacing: 2.8px;
                             @include font-line(12,37);
                             letter-spacing:0.26em;
@@ -450,7 +450,7 @@
             }
             
             .ttl {
-                font-family: cross-platform-yu-gothic, sans-serif;
+                font-family: yu-gothic-pr6n, sans-serif;
                 position: relative;
                 margin-bottom: 49px;
                 @include font-line(11,37);
@@ -550,7 +550,7 @@
                         
     
                         &__inner {
-                            font-family:cross-platform-yu-gothic, sans-serif;
+                            font-family:yu-gothic-pr6n, sans-serif;
                             letter-spacing: 2.8px;
                             @include font-line(12,37);
                             letter-spacing:0.26em;
@@ -599,7 +599,7 @@
             padding-left: 32px;
            
             .ttl {
-                font-family: cross-platform-yu-gothic, sans-serif;
+                font-family: yu-gothic-pr6n, sans-serif;
                 position: relative;
                 margin-bottom: 49px;
                 @include font-line(11,37);
@@ -718,7 +718,7 @@
                         
     
                         &__inner {
-                            font-family:cross-platform-yu-gothic, sans-serif;
+                            font-family:yu-gothic-pr6n, sans-serif;
                             letter-spacing: 2.8px;
                             @include font-line(12,37);
                             letter-spacing:0.26em;
@@ -788,7 +788,7 @@
         &-copyright {
             color: #fff;
             letter-spacing: 2px;
-            font-family: cross-platform-yu-gothic, sans-serif;
+            font-family: yu-gothic-pr6n, sans-serif;
             // font: 500 12px/27.5px 'cross-platform-yu-gothic';
             font-weight: 500;
             @include font-line(12);
