--- a/src/assets/scss/pages/_access.scss
+++ b/src/assets/scss/pages/_access.scss
@@ -64,7 +64,7 @@
 			margin: 0 auto;
 			max-width: 1100px;
 			color: #fff;
-			font-family: cross-platform-yu-gothic, sans-serif;
+			font-family: yu-gothic-pr6n, sans-serif;
 			@include font-line(11);
 
 			@include is-sp {
@@ -124,6 +124,7 @@
 		line-height: 1;
 		padding: 5px 0 8px 0;
 		text-align: center;
+		font-weight: 500;
 
 		@include font-line(30, 48);
 
@@ -143,7 +144,7 @@
 
 	&__sub {
 		color: $color-text03;
-		font-family: cross-platform-yu-gothic, sans-serif;
+		font-family: yu-gothic-pr6n, sans-serif;
 		font-weight: 500;
 		letter-spacing: 0.2em;
 		line-height: 1;
@@ -250,7 +251,7 @@
 						p {
 							@include font-line(13);
 							letter-spacing: 0.42em;
-							font-family: cross-platform-yu-gothic, sans-serif;
+							font-family: yu-gothic-pr6n, sans-serif;
 							font-weight: 500;
 							width: 74px;
 
@@ -291,7 +292,7 @@
 						p {
 							@include font-line(13);
 							letter-spacing: 0.12em;
-							font-family: cross-platform-yu-gothic, sans-serif;
+							font-family: yu-gothic-pr6n, sans-serif;
 							font-weight: 500;
 							padding: 15px 0 15px 20px;
 
@@ -435,6 +436,14 @@
 		padding-bottom: 100px;
 		overflow: hidden;
 
+		.c-case03__txt__sub{
+			letter-spacing: 0.18em;
+
+			@include is-max(440px){
+				letter-spacing: 0.04em !important;
+			}
+		}
+
 		@include is-sp {
 			padding-bottom: 75px;
 		}
@@ -500,7 +509,7 @@
 						& p:last-child {
 							font-weight: 700;
 							@include font-line(16, 28);
-							font-family: cross-platform-yu-gothic, sans-serif;
+							font-family: yu-gothic-pr6n, sans-serif;
 							letter-spacing: 0.3em;
 
 							// @include is-sp {
@@ -536,7 +545,7 @@
 						p {
 							font-weight: 500;
 							@include font-line(12, 21);
-							font-family: cross-platform-yu-gothic, sans-serif;
+							font-family: yu-gothic-pr6n, sans-serif;
 							letter-spacing: 0;
 							color: #000;
 							padding-top: 15px;
@@ -782,7 +791,7 @@
 			line-height: 39px;
 		}
 
-		@include is-max(410px) {
+		@include is-max(440px) {
 			font-size: 5.9vw;
 		}
 	}
